EPMDJ-2891: Update Scope Page. Transfer SessionIndicator to UI-kit
Issue: EPMDJ-2891 EPMDJ-2890

--- a/src/pages/agent-full-page/coverage-plugin/overview/active-scope-info/active-scope-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/overview/active-scope-info/active-scope-info.module.scss
@@ -17,6 +17,10 @@
     letter-spacing: 0;
     line-height: 16px;
     text-decoration: none;
+
+    &:hover {
+      color: map-get($primary-blue, medium-tint);
+    }
   }
 
   &__coverage-info {
