--- a/src/pages/agent-full-page/coverage-plugin/scope/scope-timer/scope-timer.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scope-timer/scope-timer.module.scss
@@ -4,13 +4,13 @@
   line-height: 24px;
 
   &__duration {
-    color: $slate-gray;
+    color: map-get($monochrome, default);
     font-family: $regular-font;
   }
 
   &__timer {
-    margin-left: 4px;
-    color: map-get($color-palette, green100);
+    font-family: $semibold-font;
+    color: map-get($green, default);
   }
 
   &--size {
@@ -18,6 +18,7 @@
       font-size: 14px;
     }
     &--small {
+      line-height: 16px;
       font-size: 12px;
     }
   }
