EPMDJ-2889: Add build tests and scope tests cards
Issue: EPMDJ-2889

--- a/src/pages/agent-full-page/coverage-plugin/project-methods-cards/project-methods-cards.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/project-methods-cards/project-methods-cards.module.scss
@@ -1,6 +1,6 @@
 @import '~common/style-guide/index';
 
-.project-methods-card {
+.project-methods-cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 8px;
