--- a/src/components/info-card/info-card.module.scss
+++ b/src/components/info-card/info-card.module.scss
@@ -1,8 +1,8 @@
 @import '~common/style-guide/index';
 
 .info-card {
-  height: 88px;
-  padding: 16px;
+  height: 92px;
+  padding: 12px 16px 16px 16px;
   border: solid 1px map-get($monochrome, medium-tint);
   font-size: 12px;
   line-height: 16px;
@@ -13,7 +13,7 @@
   }
 
   &__methods {
-    margin-top: 8px;
+    margin-top: 16px;
     margin-bottom: 4px;
   }
 
