--- a/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
@@ -23,11 +23,6 @@
     margin-right: 16px;
   }
 
-  &__project-methods {
-    margin-top: 8px;
-    width: 100%;
-  }
-
   &__routing-tabs-panel {
     width: 100%;
     height: 49px;
@@ -40,5 +35,9 @@
     align-items: center;
     margin-right: 8px;
     color: map-get($monochrome, black);
+  }
+
+  &__tab-content {
+    margin-top: 8px;
   }
 }
