--- a/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
@@ -15,18 +15,12 @@
     color: map-get($monochrome, black);
   }
 
-  &__scope-status {
-    display: flex;
-    flex-direction: column;
-    margin-left: 8px;
-    font-family: $semibold-font;
-    font-size: 12px;
-    line-height: 16px;
-    color: map-get($green, default);
+  &__status {
+    margin: 0 16px 0 8px;
   }
 
   &__complete-scope-button {
-    margin: 0 16px;
+    margin-right: 16px;
   }
 
   &__project-methods {
