EPMDJ-3101: Support latest UX changes
Issue: EPMDJ-3101

--- a/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
@@ -10,13 +10,12 @@
   }
 
   &__scope-name {
-    width: 100%;
     font-size: 20px;
     color: map-get($monochrome, black);
   }
 
-  &__status {
-    margin: 0 16px 0 8px;
+  &__scope-session-indicator {
+    margin: 0 8px 0 22px;
   }
 
   &__complete-scope-button {
