--- a/src/components/info-card/info-card.module.scss
+++ b/src/components/info-card/info-card.module.scss
@@ -1,7 +1,7 @@
 @import '~common/style-guide/index';
 
 .info-card {
-  height: 92px;
+  min-height: 92px;
   padding: 12px 16px 16px 16px;
   border: solid 1px map-get($monochrome, medium-tint);
   font-size: 12px;
@@ -25,6 +25,7 @@
   }
 
   &__total-count {
+    align-self: baseline;
     font-family: $regular-font;
     font-size: 14px;
     line-height: 18px;
@@ -41,5 +42,11 @@
     border-radius: 2px;
     background: map-get($data-visualization, card-progress-bar);
     transition: width 1000ms ease-in-out;
+  }
+
+  &__additional-information {
+    margin-left: 4px;
+    font-size: 10px;
+    line-height: 20px;
   }
 }
