--- a/src/pages/agent-full-page/coverage-plugin/overview/build-coverage-info/build-coverage-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/overview/build-coverage-info/build-coverage-info.module.scss
@@ -48,4 +48,16 @@
       }
     }
   }
+
+  &__build-coverage-percentage {
+    margin-right: 8px;
+    font-size: 32px;
+    line-height: 40px;
+    color: map-get($monochrome, black);
+  }
+
+  &__unique-coverage-percentage {
+    line-height: 24px;
+    color: map-get($data-visualization, build-cover);
+  }
 }
