--- a/src/pages/agent-full-page/coverage-plugin/scope/scopes-list/scopes-list.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scopes-list/scopes-list.module.scss
@@ -7,13 +7,18 @@
   }
 
   &__title {
-    height: 58px;
-    font-size: 18px;
-    line-height: 24px;
+    height: 80px;
+    font-size: 24px;
+    line-height: 32px;
+    font-family: $light-font;
+    color: map-get($monochrome, black);
+  }
 
-    & > * {
-      margin-right: 8px;
-    }
+  &__scopes-count {
+    margin-left: 8px;
+    font-size: 20px;
+    font-family: $regular-font;
+    color: map-get($monochrome, default);
   }
 
   &__header-cell {
@@ -59,13 +64,6 @@
     font-family: $semibold-font;
   }
 
-  &__scopes-count {
-    font-size: 18px;
-    line-height: 24px;
-    font-family: $light-font;
-    color: map-get($color-palette, middle-blue);
-  }
-
   &__name-cell {
     color: map-get($color-palette, blue100);
     font-family: $semibold-font;
@@ -88,10 +86,13 @@
 
   &__active-badge {
     margin-left: 8px;
+    font-size: 12px;
+    color: map-get($green, default);
   }
 
   &__ignore-badge {
     margin-left: 8px;
+    font-size: 12px;
     color: map-get($monochrome, default);
   }
 
