EPMDJ-3030: Add Back button. Add correct data at the first configuration
Issue: EPMDJ-3030 EPMDJ-3118 EPMDJ-3345

--- a/src/modules/quality-gate-pane/quality-gate-status/condition/condition.module.scss
+++ b/src/modules/quality-gate-pane/quality-gate-status/condition/condition.module.scss
@@ -13,7 +13,10 @@
   }
 
   &__content {
-    margin: 0 auto 0 16px;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    margin: 0 16px;
     font-size: 14px;
     line-height: 16px;
   }
