--- a/src/modules/quality-gate-pane/quality-gate-pane.module.scss
+++ b/src/modules/quality-gate-pane/quality-gate-pane.module.scss
@@ -7,7 +7,7 @@
   font-family: $regular-font;
 
   &__header {
-    height: 63px;
+    height: 64px;
     padding: 0 24px;
     border-bottom: 1px solid map-get($monochrome, medium-tint);
   }
@@ -33,15 +33,13 @@
   }
 
   &__actions-panel {
-    display: flex;
+    display: grid;
+    grid-template-columns: max-content max-content max-content;
+    grid-gap: 16px;
     align-items: center;
     height: 80px;
     padding: 0 24px;
     margin-top: auto;
     background-color: map-get($monochrome, light-tint);
-
-    :first-child {
-      margin-right: 16px;
-    }
   }
 }
