EPMDJ-3645: Add ZeroValue instead of n/a
Issue: EPMDJ-3645

--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/action-section/action-section.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/action-section/action-section.module.scss
@@ -32,7 +32,7 @@
     color: map-get($primary-blue, default);
   }
 
-  &__not-available {
+  &__zero-value {
     font-size: 20px;
     line-height: 32px;
   }
