EPMDJ-4369: Notifications - Bulk operations integration

--- a/src/components/toolbar/notifications-sidebar/notifications-sidebar.module.scss
+++ b/src/components/toolbar/notifications-sidebar/notifications-sidebar.module.scss
@@ -37,7 +37,7 @@
 
     & > * {
       margin-right: 16px;
-      cursor: not-allowed;
+      cursor: pointer;
 
       &:hover {
         color: map-get($color-palette, blue75);
