--- a/src/components/toolbar/notifications-sidebar/notification/notification.module.scss
+++ b/src/components/toolbar/notifications-sidebar/notification/notification.module.scss
@@ -10,6 +10,7 @@
     font-size: 12px;
     color: $slate-gray;
     border-bottom: 1px solid map-get($color-palette, light-blue);
+    cursor: pointer;
 
     & > *:not(:last-child) {
       margin-bottom: 4px;
