--- a/src/modules/plugins-settings-tab/add-plugins-modal/add-plugins-modal.module.scss
+++ b/src/modules/plugins-settings-tab/add-plugins-modal/add-plugins-modal.module.scss
@@ -6,11 +6,11 @@
   height: 100%;
 
   &__header {
-    padding: 24px 24px;
-    border-bottom: 1px solid map-get($color-palette, light-blue);
-    font-size: 18px;
-    line-height: 24px;
-    color: map-get($color-palette, black100);
+    padding: 16px 24px;
+    border-bottom: 1px solid map-get($monochrome, medium-tint);
+    font-size: 20px;
+    line-height: 32px;
+    color: map-get($monochrome, black);
   }
 
   &__title {
@@ -18,7 +18,7 @@
     font-family: $semibold-font;
     line-height: 40px;
     font-size: 14px;
-    color: map-get($color-palette, dark-blue);
+    color: map-get($monochrome, black);
   }
 
   &__content {
@@ -28,26 +28,26 @@
   }
 
   &__plugins-list {
-    height: calc(100% - 80px);
+    height: calc(100% - 200px);
     width: 100%;
     overflow: auto;
-    border: 1px solid map-get($color-palette, light-blue);
+    border: 1px solid map-get($monochrome, medium-tint);
     border-radius: 4px;
-    background-color: map-get($color-palette, white);
+    background-color: map-get($monochrome, white);
   }
 
   &__plugins-list-item {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid map-get($color-palette, light-blue);
+    border-bottom: 1px solid map-get($monochrome, medium-tint);
 
     &:first-child {
-      border-top: 1px solid map-get($color-palette, light-blue);
+      border-top: 1px solid map-get($monochrome, medium-tint);
     }
 
     &--selected {
-      background-color: rgba(0, 127, 255, 0.15);
-      color: map-get($color-palette, white);
+      background-color: map-get($primary-blue, light-tint);
+      color: map-get($monochrome, white);
     }
   }
 
@@ -59,12 +59,12 @@
     height: 96px;
     min-width: 96px;
     border-radius: 16px;
-    background-color: map-get($color-palette, ultra-light-blue);
-    color: $slate-gray;
+    background-color: map-get($monochrome, light-tint);
+    color: map-get($monochrome, default);
 
     &--selected {
-      background-color: map-get($color-palette, blue100);
-      color: map-get($color-palette, white);
+      background-color: map-get($primary-blue, default);
+      color: map-get($monochrome, white);
     }
   }
 
@@ -72,7 +72,7 @@
     font-family: $semibold-font;
     font-size: 14px;
     line-height: 22px;
-    color: $gravel-color;
+    color: map-get($monochrome, black);
   }
 
   &__plugin-description {
@@ -80,7 +80,7 @@
     margin-right: 30px;
     font-size: 14px;
     line-height: 22px;
-    color: $slate-gray;
+    color: map-get($monochrome, default);
   }
 
   &__actions {
