EPMDJ-4853: Add button "Go to New Build" for NewBuildModal. Update styles
Issue: EPMDJ-4853

--- a/src/pages/agent-full-page/new-build-modal/new-build-modal.module.scss
+++ b/src/pages/agent-full-page/new-build-modal/new-build-modal.module.scss
@@ -8,6 +8,12 @@
   }
 
   &__section {
-    margin-bottom: 24px;
+    margin-bottom: 16px;
+  }
+
+  &__actions-panel {
+    display: grid;
+    grid-template-columns: max-content max-content;
+    gap: 16px;
   }
 }
