--- a/src/pages/agent-full-page/new-build-modal/build-updates/build-updates.module.scss
+++ b/src/pages/agent-full-page/new-build-modal/build-updates/build-updates.module.scss
@@ -5,15 +5,16 @@
   width: 100%;
 
   &__title {
+    margin-bottom: 24px;
     font-size: 14px;
-    line-height: 32px;
+    line-height: 20px;
     font-family: $semibold-font;
   }
 
   &__content {
     display: flex;
     padding: 16px;
-    border: 1px solid map-get($color-palette, light-blue);
+    border: 1px solid map-get($monochrome, medium-tint);
 
     & > :not(:last-child) {
       margin-right: 85px;
@@ -23,13 +24,15 @@
   &__icons-wrapper {
     &--type {
       &--modified {
-        color: map-get($color-palette, yellow50);
+        color: map-get($orange, default);
       }
+
       &--new {
-        color: map-get($color-palette, green100);
+        color: map-get($green, default);
       }
+
       &--deleted {
-        color: map-get($color-palette, red50);
+        color: map-get($red, default);
       }
     }
   }
@@ -44,7 +47,7 @@
 
   &__methods-count {
     margin-top: 14px;
-    color: map-get($color-palette, black100);
+    color: map-get($monochrome, black);
     font-family: $light-font;
     font-size: 36px;
     line-height: 32px;
