--- a/src/pages/agent-full-page/new-build-modal/header/header.module.scss
+++ b/src/pages/agent-full-page/new-build-modal/header/header.module.scss
@@ -10,7 +10,7 @@
     height: 80px;
     width: 80px;
     border-radius: 50%;
-    border: 2px solid map-get($color-palette, black100);
+    border: 2px solid map-get($monochrome, black);
   }
 
   &__logo {
@@ -33,8 +33,10 @@
   }
 
   &__prev-build-info {
+    margin-top: 16px;
     font-size: 12px;
-    color: $slate-gray;
+    line-height: 16px;
+    color: map-get($monochrome, default);
     white-space: nowrap;
   }
 
