--- a/src/pages/agent-full-page/coverage-plugin/compound-cell/compound-cell.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/compound-cell/compound-cell.module.scss
@@ -21,16 +21,17 @@
   &__class-name {
     height: 19px;
     width: 40vw;
-    color: map-get($color-palette, black100);
-    font-size: 14px;
+    color: map-get($monochrome, black);
+    font-size: 12px;
     font-family: $semibold-font;
   }
 
   &__class-path {
     height: 16px;
     width: 40vw;
+    font-family: $regular-font;
     font-size: 12px;
-    color: $slate-gray;
+    color: map-get($monochrome, default);
     overflow: hidden;
     white-space: nowrap;
   }
