--- a/src/pages/agent-full-page/dashboard/sections/section-tooltip/section-tooltip.module.scss
+++ b/src/pages/agent-full-page/dashboard/sections/section-tooltip/section-tooltip.module.scss
@@ -17,7 +17,7 @@
 
   &__tooltip-item-value {
     margin-left: 12px;
-    font-family: $semibold-font;
+    font-family: $regular-font;
     line-height: 20px;
     text-align: right;
     opacity: 0.5;
