--- a/src/pages/agent-full-page/dashboard/dashboard.module.scss
+++ b/src/pages/agent-full-page/dashboard/dashboard.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
 
   &__header {
-    margin: 24px;
+    margin: 20px 24px 28px 24px;
     font-size: 24px;
     line-height: 32px;
     font-family: $light-font;
