--- a/src/pages/agent-full-page/coverage-plugin/test-details/covered-methods-by-test-sidebar/covered-methods-by-test-sidebar.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/test-details/covered-methods-by-test-sidebar/covered-methods-by-test-sidebar.module.scss
@@ -29,7 +29,7 @@
   &__method-info-label {
     min-width: 29px;
     line-height: 32px;
-    text-align: right;
+    text-align: left;
     color: map-get($color-palette, dark-blue);
     font-size: 13px;
     font-family: $semibold-font;
@@ -37,7 +37,6 @@
 
   &__method-info-value {
     margin-left: 20px;
-    line-height: 32px;
     color: $slate-gray;
     font-size: 13px;
     word-break: break-all;
