EPMDJ-3753: Update covered methods modal
Issue: EPMDJ-3753

--- a/src/pages/agent-full-page/coverage-plugin/coverage-rate-icon/coverage-rate-icon.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-rate-icon/coverage-rate-icon.module.scss
@@ -2,18 +2,20 @@
 
 .coverage-rate-icon {
   &__icon-wrapper {
+    height: 16px;
     margin-left: 16px;
+
     &--rate {
       &--full {
-        color: map-get($color-palette, green100);
+        color: map-get($monochrome, dark-tint);
       }
 
       &--partly {
-        color: map-get($color-palette, yellow50);
+        color: map-get($orange, default);
       }
 
       &--missed {
-        color: map-get($color-palette, red100);
+        color: map-get($red, default);
       }
     }
   }
