--- a/src/common/style-guide/common.scss
+++ b/src/common/style-guide/common.scss
@@ -24,7 +24,7 @@ h2 {
   font-size: 18px;
   font-family: $light-font;
   line-height: 24px;
-  color: map-get($color-palette, middle-blue);
+  color: map-get($monochrome, default);
 }
 
 b {
