EPMDJ-4944: Update associated tests modal
Issue: EPMDJ-4912 EPMDJ-4944

--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/associated-test-modal/associated-test-modal.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/associated-test-modal/associated-test-modal.module.scss
@@ -8,67 +8,19 @@
   &__header {
     display: flex;
     align-items: center;
-    height: 63px;
-    border-bottom: 1px solid map-get($color-palette, light-blue);
+    min-height: 64px;
     padding-left: 24px;
     font-size: 18px;
     line-height: 24px;
-    color: map-get($color-palette, black100);
-
-    & > * {
-      margin-right: 8px;
-    }
   }
 
-  &__content {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    overflow-y: auto;
+  &__modal-name {
+    color: map-get($monochrome, black);
   }
 
-  &__test-list {
-    display: flex;
-    flex-direction: column;
-    font-size: 14px;
-  }
-
-  &__section {
-    display: flex;
-    align-items: center;
-    font-size: 13px;
-    line-height: 40px;
-    font-family: $semibold-font;
-    border-bottom: 1px solid map-get($color-palette, black10);
-    padding-left: 8px;
-    cursor: pointer;
-
-    &--expanded {
-      background-color: rgba(0, 127, 255, 0.15);
-    }
-  }
-
-  &__expander-icon {
-    margin-right: 14px;
-    color: map-get($color-palette, blue100);
-  }
-
-  &__test-list-item {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    word-break: normal;
-    word-wrap: normal;
-    overflow-wrap: normal;
-    min-height: 40px;
-    padding-left: 56px;
-    border-bottom: 1px solid map-get($color-palette, black10);
-    font-size: 13px;
-  }
-
-  &__test-list-item-icon {
-    display: flex;
-    align-items: center;
-    margin-right: 18px;
+  &__tests-count {
+    margin-left: 8px;
+    font-family: $light-font;
+    color: map-get($monochrome, default);
   }
 }
