Integrate new ui-kit tables. Update styles. Create Cells components

--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/coverage-cell/coverage-cell.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/coverage-cell/coverage-cell.module.scss
@@ -1,6 +1,6 @@
 @import '~common/style-guide/index';
 
-.coverage-cell {
+.packages-tree-coverage-cell {
   display: flex;
   flex-direction: row;
   align-items: center;
