--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/table/expandable-table/row-expander/row-expander.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/table/expandable-table/row-expander/row-expander.module.scss
@@ -1,26 +1,22 @@
 @import '~common/style-guide/index';
 
-.row-expander {
+.packages-tree-row-expander {
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  position: relative;
 
   &__icon {
     display: flex;
     align-items: center;
-    color: map-get($color-palette, blue100);
-    margin-right: 5px;
+    color: map-get($primary-blue, default);
 
     &--expanded {
       transform: rotate(90deg);
     }
 
     &--with-margin {
-      position: absolute;
-      right: -22px;
-      top: -7px;
+      margin-left: 40px;
     }
   }
 }
