--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/table/table.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/table/table.module.scss
@@ -1,30 +1,43 @@
 @import '~common/style-guide/index';
 
 .packages-tree {
-  border-collapse: collapse;
   width: 100%;
-  font-size: 14px;
-  color: $slate-gray;
-  white-space: nowrap;
+  table-layout: fixed;
+  border-collapse: collapse;
+  font-size: 12px;
+  line-height: 16px;
+  color: map-get($monochrome, black);
 
   tbody {
     tr {
       td {
-        border-bottom: 1px solid map-get($color-palette, light-blue);
         height: 48px;
+        border-bottom: 1px solid map-get($monochrome, medium-tint);
+      }
+
+      & > td:first-child,
+      td:last-child {
+        padding: 0 12px;
       }
     }
   }
 
   &__header {
     th {
-      line-height: 20px;
-      color: map-get($color-palette, dark-blue);
-      text-align: left;
-      font-family: $semibold-font;
-      border-bottom: 1px solid map-get($color-palette, dark-blue);
-      border-top: 1px solid map-get($color-palette, dark-blue);
       height: 48px;
+      font-size: 14px;
+      line-height: 20px;
+      font-family: $semibold-font;
+      border-bottom: 1px solid map-get($monochrome, black);
+      border-top: 1px solid map-get($monochrome, black);
+      color: map-get($monochrome, black);
+    }
+
+    tr {
+      & > th:first-child,
+      th:last-child {
+        padding: 0 12px;
+      }
     }
   }
 
@@ -56,21 +69,6 @@
         }
       }
     }
-  }
-
-  &__toggle {
-    position: absolute;
-    right: 0;
-    top: 5px;
-    cursor: pointer;
-    display: flex;
-  }
-
-  &__sort {
-    cursor: pointer;
-    position: relative;
-    display: inline-block;
-    padding-right: 12px;
   }
 
   &--columns-size {
