EPMDJ-4838: Implement tests-to-run page for singl agent
Issue: EPMDJ-4838

--- a/src/components/cells/compound-cell/compound-cell.module.scss
+++ b/src/components/cells/compound-cell/compound-cell.module.scss
@@ -19,6 +19,7 @@
 
   &__cell-additional-info {
     margin-top: 4px;
+    height: 20px;
     line-height: 20px;
     font-size: 12px;
     font-family: $regular-font;
