--- a/src/pages/agent-full-page/coverage-plugin/coverage-details/coverage-details.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-details/coverage-details.module.scss
@@ -4,6 +4,10 @@
   display: flex;
   flex-direction: column;
 
+  &__coverage-details-search-panel {
+    margin-top: 16px;
+  }
+
   &__not-found {
     display: grid;
     place-items: center;
@@ -23,17 +27,5 @@
     line-height: 20px;
     color: map-get($monochrome, default);
     text-align: center;
-  }
-
-  &__search-field {
-    margin: 24px 0 12px 0;
-  }
-
-  &__search-result {
-    padding-top: 16px;
-    margin-left: 16px;
-    font-size: 12px;
-    line-height: 20px;
-    color: map-get($monochrome, default);
   }
 }
