--- a/src/pages/agent-full-page/coverage-plugin/project-methods-cards/project-methods-cards.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/project-methods-cards/project-methods-cards.module.scss
@@ -2,6 +2,10 @@
 
 .project-methods-cards {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 8px;
+
+  &__deleted {
+    font-family: $regular-font;
+  }
 }
