--- a/src/pages/agent-full-page/coverage-plugin/project-tests-cards/project-tests-cards.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/project-tests-cards/project-tests-cards.module.scss
@@ -2,6 +2,6 @@
 
 .project-tests-cards {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 8px;
 }
