--- a/src/pages/agent-full-page/coverage-plugin/overview/active-build-coverage-info/active-build-coverage-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/overview/active-build-coverage-info/active-build-coverage-info.module.scss
@@ -1,8 +1,7 @@
 @import '~common/style-guide/index';
 
 .active-build-coverage-info {
-  width: calc(100% - 258px - 52px);
-  height: 100%;
+  width: 100%;
   font-size: 12px;
   line-height: 16px;
   color: map-get($monochrome, default);
