--- a/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-coverage-info/scope-coverage-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-coverage-info/scope-coverage-info.module.scss
@@ -1,6 +1,8 @@
 @import '~common/style-guide/index';
 
 .scope-coverage-info {
+  margin-top: 16px;
+
   &__title {
     font-family: $semibold-font;
     font-size: 12px;
