--- a/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/coverage-plugin-header.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/coverage-plugin-header/coverage-plugin-header.module.scss
@@ -21,6 +21,7 @@
   }
 
   &__plugin-name {
+    margin-bottom: 4px;
     font-family: $light-font;
     font-size: 24px;
     line-height: 32px;
@@ -28,11 +29,15 @@
 
   &__current-build {
     display: flex;
-    margin-top: 4px;
     font-family: $semibold-font;
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 14px;
+    line-height: 20px;
     color: map-get($monochrome, default);
+  }
+
+  &__baseline-panel {
+    gap: 8px;
+    margin-left: 16px;
   }
 
   &__version {
@@ -49,6 +54,7 @@
 
   &__info-icon {
     display: flex;
+    color: map-get($monochrome, default);
   }
 
   &__status-wrapper {
