EPMDJ-5231: update scope name block on scope details and all scope page
Issue: EPMDJ-5231, EPMDJ-5232

--- a/src/pages/agent-full-page/coverage-plugin/scope/scopes-list/scopes-list.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scopes-list/scopes-list.module.scss
@@ -73,6 +73,12 @@
     cursor: pointer;
   }
 
+  &__scope-name {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
   &__start-date {
     font-size: 12px;
     line-height: 20px;
