--- a/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/scope-info/scope-info.module.scss
@@ -2,6 +2,11 @@
 
 .scope-info {
   &__header {
+    display: grid;
+    grid-template-columns: minmax(auto, max-content) auto auto;
+    align-items: center;
+    gap: 16px;
+    width: 100%;
     height: 80px;
     margin-bottom: 14px;
     border-bottom: 1px solid map-get($monochrome, medium-tint);
@@ -10,8 +15,12 @@
   }
 
   &__scope-name {
-    margin-right: 16px;
-    font-size: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    line-height: 32px;
+    font-family: $light-font;
+    font-size: 24px;
     color: map-get($monochrome, black);
   }
 
