--- a/src/components/tabs/tabs.module.scss
+++ b/src/components/tabs/tabs.module.scss
@@ -9,7 +9,7 @@
     box-sizing: border-box;
     position: relative;
     cursor: pointer;
-    min-height: 47px;
+    min-height: 46px;
     border: none;
     padding: 0 0 4px 0;
     background: none;
@@ -21,7 +21,7 @@
     margin-right: 28px;
 
     &--active {
-      color: map-get($color-palette, black100);
+      color: map-get($monochrome, black);
 
       &:after {
         content: '';
@@ -32,7 +32,7 @@
         bottom: 0;
         height: 4px;
         border-radius: 2px;
-        background-color: map-get($color-palette, blue100);
+        background-color: map-get($primary-blue, default);
         transform: translateY(50%);
       }
     }
