--- a/src/modules/no-plugins-stub/no-plugins-stub.module.scss
+++ b/src/modules/no-plugins-stub/no-plugins-stub.module.scss
@@ -6,28 +6,36 @@
   flex-grow: 1;
   justify-content: center;
   align-items: center;
-  color: map-get($color-palette, middle-blue);
+  border-top: 1px solid map-get($monochrome, medium-tint);
+  color: map-get($monochrome, default);
 
   &__icon {
-    margin-bottom: 38px;
+    margin-bottom: 40px;
   }
 
   &__title {
     font-size: 24px;
     line-height: 32px;
-    text-align: center;
   }
 
   &__message {
     margin-top: 8px;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 20px;
     text-align: center;
-    color: $slate-gray;
   }
 
   &__link {
+    display: block;
+    margin-top: 4px;
+    font-size: 14px;
+    font-family: $semibold-font;
     text-decoration: none;
-    color: map-get($color-palette, blue100);
+    text-transform: lowercase;
+    color: map-get($primary-blue, default);
+
+    &:first-letter {
+      text-transform: uppercase;
+    }
   }
 }
