--- a/src/pages/service-group-full-page/dashboard/dashboard.module.scss
+++ b/src/pages/service-group-full-page/dashboard/dashboard.module.scss
@@ -1,13 +1,13 @@
 @import '~common/style-guide/index';
 
-.dashboard-page {
+.service-group-dashboard-page {
   display: flex;
   flex-direction: column;
   height: 100%;
   width: 100%;
 
   &__header {
-    margin: 24px;
+    margin: 24px 0;
     font-size: 24px;
     line-height: 32px;
     font-family: $light-font;
@@ -16,6 +16,5 @@
   &__content {
     display: flex;
     flex-grow: 1;
-    margin: 0 24px;
   }
 }
