--- a/src/components/single-bar/single-bar.module.scss
+++ b/src/components/single-bar/single-bar.module.scss
@@ -12,7 +12,7 @@
     top: 8px;
     left: 50%;
     transform: translateX(-50%);
-    color: map-get($monochrome, dark-tint);
+    color: map-get($monochrome, default);
     font-size: 12px;
     line-height: 16px;
     text-align: center;
