EPMDJ-5233: Update service group test2code page overview
Issue: EPMDJ-5233

--- a/src/components/list/list.module.scss
+++ b/src/components/list/list.module.scss
@@ -20,5 +20,5 @@
   display: grid;
   align-items: center;
   height: 80px;
-  border-bottom: 1px solid map-get($color-palette, black10);
+  border-bottom: 1px solid map-get($monochrome, medium-tint);
 }
