--- a/src/pages/agent-full-page/coverage-plugin/scope/finish-scope-modal/finish-scope-modal.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/finish-scope-modal/finish-scope-modal.module.scss
@@ -1,14 +1,14 @@
 @import '~common/style-guide/index';
 
 .finish-scope-modal {
-  width: 530px;
+  width: 480px;
 
   &__content {
     margin: 24px;
   }
 
   &__ignore-scope {
-    margin: 24px 0px 32px 0px;
+    margin: 24px 0px 36px 0px;
   }
 
   &__actions-panel {
@@ -21,5 +21,9 @@
 
   &__header {
     max-width: 460px;
+  }
+
+  &__management-sessions-button {
+    font-size: 14px;
   }
 }
