--- a/src/pages/agent-full-page/coverage-plugin/scope/finish-scope-modal/scope-summary/scope-summary.module.scss
+++ b/src/pages/agent-full-page/coverage-plugin/scope/finish-scope-modal/scope-summary/scope-summary.module.scss
@@ -6,18 +6,19 @@
 
   &__title {
     width: 100%;
+    padding-bottom: 4px;
     font-size: 14px;
-    line-height: 32px;
+    line-height: 20px;
     font-family: $semibold-font;
-    padding-bottom: 8px;
   }
 
   &__element {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid map-get($color-palette, black10);
+    border-bottom: 1px solid map-get($monochrome, medium-tint);
+    padding: 12px 0 8px 0;
     font-size: 14px;
-    line-height: 40px;
+    line-height: 20px;
   }
 
   &__element-value {
